--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nodeJS-base",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
