--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "chalk": "^5.0.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0"
+  }, 
+  "engines": {
+    "node": "14.17.0"
   }
 }
